--- a/react-website-leuk/src/App.css
+++ b/react-website-leuk/src/App.css
@@ -1,42 +1,59 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: #242424;
+  margin: 0; /* Zorg dat er geen margin is om layout-issues te vermijden */
+  padding: 0;
+}
+
+
+h1{
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  font-weight: 500;
+  font-size: 3.2em;
+  line-height: 1.1;
+  color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-username{
+  height: 50px;
+  width: 360px;
+  align-items: center;
+  font-size: 1.5em;
+  text-align: left;
+  border-radius: 4px;
+  border-width: 4px;
+  border: solid;
+  background-color: #242424;
+  border-color: rgb(134, 134, 134);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.input-password{
+  height: 50px;
+  width: 360px;
+  align-items: center;
+  font-size: 1.5em;
+  text-align: left;
+  border-radius: 4px;
+  border-width: 4px;
+  border: solid;
+  background-color: #242424;
+  border-color: rgb(134, 134, 134);
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.Button {
+  height: 40px;
+  width: 95px;
+  border-radius: 5px;
+  border: none;
+  background-color: #4a4a4a;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.25em;
+  display: block;
+  margin: 20px auto; /* Dit centreert de knop */
 }
